compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__errors__type_imported_as_value.snap
---
source: compiler-core/src_refactored/__core/type_/tests/errors.rs
assertion_line: 2079
expression: "import gleam/wibble.{Wibble}"
snapshot_kind: text
---
----- SOURCE CODE
-- gleam/wibble.gleam
pub type Wibble {
               Wobble
             }

-- main.gleam
import gleam/wibble.{Wibble}

----- ERROR
error: Unknown module value
  ┌─ /src/one/two.gleam:1:22
  │
1 │ import gleam/wibble.{Wibble}
  │                      ^^^^^^ Did you mean `type Wibble`?

`Wibble` is only a type, it cannot be imported as a value.
